fix: add missing color variable for home.component

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,3 +1,7 @@
+:host {
+  --primary-color: #3498db;
+}
+
 .results {
   display: grid;
   column-gap: 14px;
